--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -87,3 +87,28 @@ p {
   background-repeat: no-repeat;
 }
 
+/* Animation */
+.intro-content {
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Media Queries */
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+} 
+
