--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 
-
 *{
     margin: 0;
     padding: 0;
@@ -9,11 +8,12 @@
     background: transparent;
 }
 
-
-body{
-    background: rgb(30, 30, 30);
+body {
+    font-family: 'Nunito', sans-serif;
+    background-color: #121212;
     color: white;
+    margin: 0;
+    padding: 0;    
     overflow: hidden;
     overflow-y: scroll;
 }
-
