--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,12 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 
-body {
-    font-family: 'Nunito', sans-serif;
-    background-color: #121212;
-    color: white;
-    margin: 0;
-    padding: 0;
-}
 
 #about {
     min-height: calc(100vh - 3rem);
@@ -176,5 +168,26 @@ body {
     max-width: 250px;
 }
 
+.wave1 {
+  position: absolute;
+  width: 100%;
+  height: 5rem;
+  z-index: 1;
+  overflow: hidden;
+  line-height: 0;
+  bottom: 0; /* Add this line */
+  left: 0; /* Add this line */
+  right: 0; /* Add this line */
+}
 
-
+.wave2 {
+  position: absolute;
+  width: 100%;
+  height: 5rem;
+  z-index: 0;
+  overflow: hidden;
+  line-height: 0;
+  bottom: 0; /* Add this line */
+  left: 0; /* Add this line */
+  right: 0; /* Add this line */
+}
