--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -32,6 +32,7 @@
 .desktopMenuListItem {
   margin: 1rem;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .desktopMenuListItem:hover {
